# test

./: .gitignore  AGENTS.md  GEMINI.md  HelloWorld.py  README.md  SQL_CONNECTION_README.md  clustering_comparison.py  connect_sql_database.ps1  find_even_numbers  find_even_numbers.c  find_even_numbers.py  hello.c  kmeans.py  linear_regression.ipynb  linear_regression.py  pyproject.toml  sql_connection.py  sql_connection_example.ps1  test.py  test_clustering_comparison.py  test_kmeans.py  test_linear_regression.py  test_sql_connection.py
azure-entra-agent/: .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  SECURITY_ADVANTAGES.md  SECURITY_CHECKLIST.md  entra_agent.py  example_usage.py  graph_capabilities.md  main.py  pyproject.toml  requirements.txt  setup_env.bat  setup_env.ps1  setup_env_manual.md  test_setup.py
openai-agentkit/: openai-agentkit.py  test_agent_output.py
