[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk>=0.1.1",
    "fastapi>=0.118.2",
    "fastmcp>=2.12.4",
    "google-adk>=1.16.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=2.2.0",
    "openai-agents>=0.1.0",
    "pandas>=2.3.3",
    "pyodbc>=5.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.37.0",
]
